// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MUTATION MOCK TESTS Mock changePassword 1`] = `
Object {
  "changeUserPassword": Object {
    "message": "Border Terrier",
    "success": true,
  },
}
`;

exports[`MUTATION MOCK TESTS Mock createTeachingPreferences 1`] = `
Object {
  "createTeachingPreference": Object {
    "message": "Huntaway",
    "success": true,
  },
}
`;

exports[`MUTATION MOCK TESTS Mock createUser 1`] = `undefined`;

exports[`MUTATION MOCK TESTS Mock createUser 2`] = `
Object {
  "createUser": Object {
    "message": "Try to program the HTTP sensor, maybe it will connect the open-source sensor!",
    "password": "Singapura",
    "success": true,
    "username": "Amos",
  },
}
`;

exports[`MUTATION MOCK TESTS Mock generateSchedule 1`] = `
Object {
  "generateSchedule": Object {
    "message": "English Setter",
    "success": true,
  },
}
`;

exports[`MUTATION MOCK TESTS Mock login 1`] = `
Object {
  "login": Object {
    "message": "client-driven",
    "success": true,
    "token": "180.49.130.243",
  },
}
`;

exports[`MUTATION MOCK TESTS Mock logout 1`] = `
Object {
  "logout": Object {
    "message": "zero administration",
    "success": true,
    "token": "79.105.140.175",
  },
}
`;

exports[`MUTATION MOCK TESTS Mock resetPassword 1`] = `
Object {
  "resetPassword": Object {
    "message": ",tw:FOIV}I",
    "password": "Sparks",
    "success": true,
  },
}
`;
